Agregar reporte de inventario a una fecha con registro de fechas de movimientos de stock
